[tool.poetry]
name = "smart-route-backend-api"
version = "0.1.0"
description = ""
authors = ["Dhrumil Mistry <56185972+dmdhrumilmistry@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "smart_route_backend_api"}]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.2.3"
djangorestframework = "^3.14.0"
markdown = "^3.4.1"
django-filter = "^22.1"
folium = "^0.14.0"
python-dotenv = "^0.21.0"
osmnx = "^1.3.0"
scikit-learn = "^1.2.1"
djangorestframework-simplejwt = "^5.2.2"
whitenoise = "^6.3.0"
boto3 = "^1.26.104"
drf-yasg = "^1.21.5"
django-cors-headers = "^3.14.0"


[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
